added initial attempt at customization

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,8 +1,21 @@
-<h2> Enter your steam ID. </h2>
+<h2> Customize your profile. </h2>
 
 <p>
   <form action='/display' method='get'>
-    <input type='text' name='steamid'>
+    <p>
+      Enter your Steam ID:
+      <input type='text' name='steamid'>
+    </p>
+    <p>
+      Toggle what information you want to display.<br>
+        
+      <input type='checkbox' name='element' value='realname'>Name<br>
+      <input type='checkbox' name='element' value='location'>Location<br>
+      <input type='checkbox' name='element' value='avatar'>Avatar<br>
+      <input type='checkbox' name='element' value='personastate'>Online State<br>
+
+    </p>
+
     <input type='submit' value='Submit'>
   </form>
 </p>
