added some directions to form page

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -3,8 +3,10 @@
 <p>
   <form action='/display' method='get'>
     <p>
-      Enter your Steam ID:
-      <input type='text' name='steamid'>
+      Enter your Steam ID or custom name:<br>
+      <input type='text' name='steamid'><br>
+      NOTE: custom name is the name that appears at the end of your URL.<br>
+      Example: for steamcommunity.com/id/robinwalker, you would use robinwalker.
     </p>
     <input type='submit' value='Submit'>
   </form>
