housecleaning/rearranged routes

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,7 +1,7 @@
 <h2> Steam Signature Generator </h2>
 
 <p>
-  <form action='/display' method='get'>
+  <form action='/form-handler' method='get'>
     <p>
       Enter your Steam ID or custom name:<br>
       <input type='text' name='steamid'><br>
