--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -4,10 +4,12 @@
   <form action='/form-handler' method='get'>
     <p>
       Enter your Steam ID or custom name:<br>
-      <input type='text' name='steamid'><br>
+      <input type='text' name='steamid'>
+      <input type='submit' value='Submit'><br>
       NOTE: custom name is the name that appears at the end of your URL.<br>
       Example: for steamcommunity.com/id/robinwalker, you would use robinwalker.
     </p>
-    <input type='submit' value='Submit'>
+    Keep in mind that this is a work in progress!
+    
   </form>
 </p>
