--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -10,6 +10,7 @@
       Example: for steamcommunity.com/id/robinwalker, you would use robinwalker.
     </p>
     Keep in mind that this is a work in progress!
-    
+
+    Last update was March 17, 2016, which added recent game logos to the sig.    
   </form>
 </p>
