--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -9,7 +9,7 @@
       NOTE: custom name is the name that appears at the end of your URL.<br>
       Example: for steamcommunity.com/id/robinwalker, you would use robinwalker.
     </p>
-    Keep in mind that this is a work in progress!
+    Keep in mind that this is a work in progress!<br>
 
     Last update was March 17, 2016, which added recent game logos to the sig.    
   </form>
