list updates on web page and bump version

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -11,6 +11,9 @@
     </p>
     Keep in mind that this is a work in progress!<br>
 
-    Last update was March 17, 2016, which added recent game logos to the sig.    
+    <ul>Updates:
+      <li>October 8, 2016: Under the hood reorganization and unit testing.</li>
+      <li>March 17, 2016: added recent game logos to the sig.</li>
+    </ul>
   </form>
 </p>
