--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -12,6 +12,8 @@
     Keep in mind that this is a work in progress!<br>
 
     <ul>Updates:
+      <li>October 22, 2016: Throw validation error when input matches
+      Steam ID pattern but is not an existing Steam ID.</li>
       <li>October 8, 2016: Under the hood reorganization and unit testing.</li>
       <li>March 17, 2016: added recent game logos to the sig.</li>
     </ul>
