remove hard-coded values in renderer

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -12,6 +12,7 @@
     Keep in mind that this is a work in progress!<br>
 
     <ul>Updates:
+      <li>December 13, 2016: Some behind the scenes changes to prep for customization</li>
       <li>November 4, 2016: Brand new renderer using Canvas!</li>
       <li>October 22, 2016: Throw validation error when input matches
       Steam ID pattern but is not an existing Steam ID.</li>
