add toggles to web form

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -15,9 +15,8 @@
       <div>
         Customization Options:<br>
 
-        
         {{#each elements}}
-          {{this}}: <input type='checkbox' name='{{@key}}' checked='true'>
+          {{this}}: <input type='checkbox' name='{{@key}}' checked='true'> |
         {{/each}}
       </div>
 
