--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -3,10 +3,9 @@
 <p>
   <form action='/form-handler' method='get'>
     <p>
-
       <div>
         Enter your Steam ID or custom name:<br>
-        <input type='text' name='steamid'><br>
+        <input type='text' name='steamid' value="{{{steamIDInputValue}}}" autofocus><br>
       </div>
 
       NOTE: custom name is the name that appears at the end of your URL.<br>
