--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -13,7 +13,7 @@
       
       <div>
         Customization Options:<br>
-
+        (these don't work yet)<br>
         {{#each elements}}
           {{this}}: <input type='checkbox' name='{{@key}}' checked='true'> |
         {{/each}}
