render an error page for errors

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -25,6 +25,7 @@
     Keep in mind that this is a work in progress!<br>
 
     <ul>Updates:
+      <li>February 17, 2017: Profiles can only update once every 30 seconds. Render error pages instead of sending text.
       <li>December 13, 2016: Some behind the scenes changes to prep for customization</li>
       <li>November 4, 2016: Brand new renderer using Canvas!</li>
       <li>October 22, 2016: Throw validation error when input matches
