--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,10 @@
   </head>
   <body>
     {{{body}}}
-    <a href="http://www.steampowered.com">Powered by Steam.</a>
+
+    <div>
+      <a href="http://www.steampowered.com">Powered by Steam.</a>
+    </div>
   </body>
 </html>
 
