--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -1,7 +1,7 @@
 <h2> Steam Signature Generator </h2>
 
 <p>
-  <form action='/form-handler' method='get'>
+  <form action='/profile' method='post'>
     <p>
       <div>
         Enter your Steam ID or custom name:<br>
