changes made to front-end
/profile/ now renders a profile page instead of returning the image file directly. /sig/ now fetches the image file.

--- a/views/profileDisplay.handlebars
+++ b/views/profileDisplay.handlebars
@@ -1,21 +1,16 @@
-<h2> {{userInfo.personaname}} </h2>
+<div id="profile-container" style="display:inline-block;margin:auto;background-color:#1f1f1f;">
+  <img src={{imgSrc}} style="padding:10px;"/>
+  <p id="direct-url" onclick="selectUrl()" style="margin:1px;background-color:white;text-align:center">steamsig.drakemain.com{{imgSrc}}</p>
+</div>
 
-{{#if elements.avatar}}
-  <p><img src="{{userInfo.avatarfull}}" alt="{{userInfo.personaname}}'s avatar"></p>
-{{/if}}
+<script>
+  function selectUrl(){
+    var urlElement = document.getElementById('direct-url');
+    var range = document.createRange();
+    var selection = window.getSelection();
 
-{{#if profileVisible}}
-  {{#if elements.realname}}
-    <p>{{userInfo.realname}}</p>
-  {{/if}}
-
-  {{#if elements.location}}
-    <p>{{userInfo.loccityid}}, {{userInfo.locstatecode}}, {{userInfo.loccountrycode}}</p>
-  {{/if}}
-
-  {{#if elements.personastate}}
-    {{userInfo.personastate}}
-  {{/if}}
-{{else}}
-  <p>Your profile is not public, so most items cannot be displayed.</p>
-{{/if}}
+    selection.removeAllRanges();
+    range.selectNodeContents(urlElement);
+    selection.addRange(range);
+  }
+</script>
