--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -35,6 +35,7 @@
     Keep in mind that this is a work in progress!<br>
 
     <ul>Updates:
+      <li>June 21, 2017: /profile/ is now a profile page and /sig/ now fetches the image file. Gearing up for user authentication.
       <li>March 8, 2017: Optimizations, refactoring, and toggleable
       sig elements! Technically most customization options are currently possible (like background color, image size, and 
       element placement). All that is needed is the ability to collect that data from the web form and pass it into my renderer. 
@@ -49,7 +50,6 @@
     </ul>
   </form>
 </p>
-
 
 <script>
 function validateSteamIdPattern() {
