--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,8 @@
   <body>
     {{{body}}}
 
-    <div>
+    <footer style="position:absolute;bottom:0">
       <a href="http://www.steampowered.com">Powered by Steam.</a>
-    </div>
+    </footer>
   </body>
 </html>
-
